fix menu-toggle z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ nav {
   left: 0;
   justify-content: stretch;
   align-items: stretch;
-  z-index: 99;
+  z-index: 999;
   transform: translateX(-100%);
   transition: transform 0.5s;
   position: fixed;
@@ -84,7 +84,7 @@ nav {
 
 #menu-toggle {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   top: 30px;
   right: 30px;
   background: #212529;
